# tg_bot_reader

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: bot.py  config.py  main.py
src/handlers/: callback.py  commands.py  photo.py
src/models/: schemas.py
src/services/: image_utils.py  ocr.py  sheets.py
